--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "ejs": "^3.1.10",
     "express": "^4.21.1",
     "express-session": "^1.18.1",
+    "gridfs-stream": "^1.1.1",
     "jsdom": "^25.0.1",
     "marked": "^15.0.0",
     "method-override": "^3.0.0",
-    "mongoose": "^8.8.1",
+    "mongoose": "^5.13.7",
     "muller": "^1.1.0",
-    "multer": "^1.4.5-lts.1",
+    "multer": "^1.4.2",
+    "multer-gridfs-storage": "^5.0.2",
     "nodemon": "^3.1.7",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
